package org.example.project_cuoiky_congnghephanmem_oose.entity;

import jakarta.persistence.*;
import lombok.*;
import java.util.List;
import java.time.LocalDateTime;

@Entity
@Table(name = "Booking")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Booking {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private int bookingID;
    private LocalDateTime bookingDate;
    private double totalPrice;
    private String status;
    private LocalDateTime expiredAt;

    @ManyToOne
    @JoinColumn(name = "userID")
    private Customer customer;

    @OneToMany(mappedBy = "booking", cascade = CascadeType.ALL)
    private List<BookingDetails> bookingDetails;

    @OneToMany(mappedBy = "booking", cascade = CascadeType.ALL)
    private List<Payment> payments;

    public Booking createBooking() {
        return null;
    }

    public void cancelBooking() {
    }

    public boolean checkExpired() {
        return false;
    }
}